Fix text input styling in dark mode

--- a/src/components/Atoms/TextInput/styles.module.css
+++ b/src/components/Atoms/TextInput/styles.module.css
@@ -1,5 +1,6 @@
 .root {
   composes: with-focus from "../../../css/util.module.css";
+  background: var(--color-background);
   border: var(--border-solid);
   border-radius: var(--border-radius);
   padding: var(--spacing-tiny);
